modal onlyAvaliable website

--- a/src/pages/technician/chart-room/chart-content-customer/chart-content-customer.scss
+++ b/src/pages/technician/chart-room/chart-content-customer/chart-content-customer.scss
@@ -4,4 +4,9 @@ page-chart-content-customer {
     margin-bottom: auto;
     text-align: center;
 }
+// .number_star1{
+//     margin-top:50px;
+//     margin-bottom: auto;
+//     text-align: center;
+// }
 }
