create rating_guest  with show rating and create call phone success

--- a/src/pages/data-rent/data-rent.scss
+++ b/src/pages/data-rent/data-rent.scss
@@ -1,5 +1,14 @@
 page-data-rent {
 .rating{
     font-size: 20px;
+    margin-top:3px;
+}
+.left{
+    margin-left: 10px;
+}
+.tex-rent{
+    text-align: center;
+    vertical-align: middle;
+    line-height: 180px; 
 }
 }
