--- a/src/pages/show-tec-detail/show-tec-detail.scss
+++ b/src/pages/show-tec-detail/show-tec-detail.scss
@@ -5,4 +5,9 @@ page-show-tec-detail {
 .area_marrgin{
     padding-left: 5px;
 }
+.tex-rent{
+    text-align: center;
+    vertical-align: middle;
+    line-height: 400px; 
+}
 }
