--- a/src/pages/technician/rent/rent.scss
+++ b/src/pages/technician/rent/rent.scss
@@ -7,4 +7,9 @@ page-rent {
     .rights{
         text-align:right
     }
+    .tex-rent{
+        text-align: center;
+        vertical-align: middle;
+        line-height: 180px; 
+    }
 }
