change icon,retn_technician and add img_tax with insert logo reload

--- a/src/pages/data-rent/data-rent.scss
+++ b/src/pages/data-rent/data-rent.scss
@@ -11,4 +11,8 @@ page-data-rent {
     vertical-align: middle;
     line-height: 400px; 
 }
+.tel_tech{
+    margin-top:-7px;
+    margin-right:-25px;
+}
 }
