--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,6 +1,8 @@
 page-home {
 .logo-row{
-        padding-top: 20px;
+       color: rgb(38,177,212);
+       font-size:35px;
+       font-family: 'Muli', sans-serif;
 }
 
 .login-box{
@@ -16,4 +18,5 @@ page-home {
     margin-top:10px;
     text-align: center;
 }
+
 }
