--- a/src/pages/data-rent/data-rent.scss
+++ b/src/pages/data-rent/data-rent.scss
@@ -15,4 +15,10 @@ page-data-rent {
     margin-top:-7px;
     margin-right:-25px;
 }
+div.size{
+    font-size: 16px;
+}
+div.space_icon{
+    margin-top:11px;
+}
 }
